--- a/assets/css/pod.css
+++ b/assets/css/pod.css
@@ -1,4 +1,8 @@
-/* Globals */
+/*
+  Main style sheet
+  Includes all the base level styling
+  ----------------------------------- */
+
 @import '1-settings';
 @import '2-tools';
 @import '3-generic';
