--- a/views/components/list/list.css
+++ b/views/components/list/list.css
@@ -2,6 +2,9 @@
   Lists
   ----------------------------------- */
   
-  
+  /* Ordered lists */
 
-  
+
+  /* Unordered lists */
+
+  /* Description list */
