--- a/views/components/list/list.njk
+++ b/views/components/list/list.njk
@@ -19,3 +19,10 @@
     <li>Episode VI: Return of the Jedi</li>
     <li>Episode VII: The Force Awakens</li>
   </ol>
+
+  <dl>
+    <dt>Coffee</dt>
+    <dd>Black hot drink</dd>
+    <dt>Milk</dt>
+    <dd>White cold drink</dd>
+  </dl>
