--- a/views/components/skip-navigation-link/skip-navigation-link.css
+++ b/views/components/skip-navigation-link/skip-navigation-link.css
@@ -5,12 +5,12 @@
   [href="#main"] {
     position: absolute;
     top: 0;
-    right: 100%;
+    right: 100%; /* moves off screen */
+  }
+  
+  [href="#main"]:focus {
+    right: auto;
   }
 
-  [href="#main"] {
-      position: absolute;
-      top: 0;
-      right: 100%;
-  }
+
 
