--- a/views/about.njk
+++ b/views/about.njk
@@ -1,15 +1,15 @@
 {% extends "./templates/layout.njk" %}
-{% set page_id = "home" %} 
+{% set page_id = "about" %} 
 
 {% block meta %}
-  <title>Pod - Component styleguide</title>
+  <title>About Pod</title>
   <meta name="description" content="Component styleguide built with PostCSS and JavaScript">
 {% endblock %}
 
 
 {% block content %}
   <h1>
-    Pod 
+    About Pod 
   </h1>
 
 <ul> 
