--- a/views/component-list.njk
+++ b/views/component-list.njk
@@ -1,5 +1,5 @@
 {% extends "./templates/layout.njk" %}
-{% set page_id = "home" %} 
+{% set page_id = "component-list" %} 
 
 {% block meta %}
   <title>Pod - Component styleguide</title>
@@ -9,7 +9,7 @@
 
 {% block content %}
   <h1>
-    Pod 
+    Components 
   </h1>
 
 <ul> 
