--- a/views/components/navigation/navigation.njk
+++ b/views/components/navigation/navigation.njk
@@ -1,27 +1,26 @@
-<ul class="navigation__list">
+<ul  id="js-navigation__list" class="navigation__list">
   <li class="navigation__item">
-    <a href="#" aria-describedby="current" title="Go home" class="navigation__anchor">
+     <a href="#" title="Go to the home page" class="navigation__anchor">
       <span class="navigation__anchor__text">Home</span>
-    </a>
+     </a>
   </li>
   <li class="navigation__item">
-    <a href="#" title="View portfolio page" class="navigation__anchor active">
-      <span class="navigation__anchor__text">Portfolio</span>
+    <a href="#" title="View the components page" class="navigation__anchor">
+      <span class="navigation__anchor__text">Components</span>
+    </a>
+   </li>
+  <li class="navigation__item">
+    <a href="#" title="View the bout Pod page" class="navigation__anchor">
+      <span class="navigation__anchor__text">About Pod</span>
     </a>
   </li>
-  <li class="navigation__item">
-    <a href="#" title="View work history page" class="navigation__anchor">
-      <span class="navigation__anchor__text">Work history</span>
-    </a>
-  </li>
-  <li class="navigation__item">
-    <a href="#" title="View blog page" class="navigation__anchor">
-      <span class="navigation__anchor__text">Blog</span>
-    </a>
-  </li>
-  <li class="navigation__item">
-    <a href="#" title="Maze - PostCSS responsive grid" class="navigation__anchor">
-      <span class="navigation__anchor__text">PostCSS Maze</span>
+    <li class="navigation__item">
+    <a href="#" title="An active example" class="navigation__anchor active">
+      <span class="navigation__anchor__text">Active</span>
     </a>
   </li>
 </ul>
+
+
+
+
