--- a/views/templates/layout.njk
+++ b/views/templates/layout.njk
@@ -1,7 +1,6 @@
 {% include "includes/head.njk" %}
 
-
-<main id="main" role="main">
+<main id="main-content" role="main">
   {% block content %}
   {% endblock %}
 </main>
