--- a/views/includes/head.njk
+++ b/views/includes/head.njk
@@ -30,16 +30,41 @@
       <meta name="twitter:title" content="Cathy_Dutton"/>
       <meta name="twitter:site" content="@cathy_dutton"/>
       <meta name="twitter:image" content="/img/profile-image.jpg"/>
-      <link rel="stylesheet" href="https://rawgit.com/ffoodd/a11y.css/master/css/a11y-en.css">
+      {# <link rel="stylesheet" href="https://rawgit.com/ffoodd/a11y.css/master/css/a11y-en.css"> #}
       <link rel="stylesheet" href="/css/pod.css">
     </head>
   <body>
+  {# Sidebar #}
+  <aside id="js-sidebar" class="sidebar closed" tabindex="0" hidden='true' aria-hidden>
+    <ul  id="js-navigation__list" class="navigation__list">
+      <li class="navigation__item">
+        <a href="/" title="Go to the home page" class="navigation__anchor {% if page_id == 'home' %}active  {% endif %}">
+          <span class="navigation__anchor__text">Home</span>
+        </a>
+      </li>
+      <li class="navigation__item">
+        <a href="/component-list" title="View the components page" class="navigation__anchor {% if page_id == 'component-list' %}active  {% endif %}">
+          <span class="navigation__anchor__text">Components</span>
+        </a>
+      </li>
+      <li class="navigation__item">
+        <a href="/about" title="View the bout Pod page" class="navigation__anchor {% if page_id == 'about' %}active  {% endif %}">
+          <span class="navigation__anchor__text">About Pod</span>
+        </a>
+      </li>
+    </ul>
+  </aside>
+  <div class="wrapper">
     <a href="#main">skip to main content</a>
-    {% block header %}
-      <header role="banner" class="header">
+    <button id="js-sidebar__button" class="sidebar__button">Open menu   
+  </button>
+
+
+  {% block header %}
+    <header role="banner" class="header">
       {% include "components/a11y-buttons/a11y-buttons.njk" %}
-      </header>
-    {% endblock %}
+    </header>
+  {% endblock %}
 
 
 
