Add layout CSS partial and remove sidebar component

--- a/assets/css/3-generic.css
+++ b/assets/css/3-generic.css
@@ -92,10 +92,10 @@ audio:not([controls]) {
  * Hide the `template` element in IE 8/9/11, Safari, and Firefox < 22.
  */
 
-[hidden],
+/* [hidden],
 template {
   display: none;
-}
+} */
 
 /* Links
    ========================================================================== */
