--- a/assets/css/pod.css
+++ b/assets/css/pod.css
@@ -7,4 +7,5 @@
 @import '2-tools';
 @import '3-generic';
 @import '4-elements';
-@import '5-utilities';
+@import '5-layout';
+@import '6-utilities';
