--- a/views/includes/footer.njk
+++ b/views/includes/footer.njk
@@ -1,4 +1,5 @@
-    {# Close wrapper #}
+    {# Close wrapper and contnet wrapper #}
+      </div>
     </div>
     <script src="/js/pod.js"></script>
   </body>
