--- a/views/index.njk
+++ b/views/index.njk
@@ -6,7 +6,7 @@
   <meta name="description" content="Component styleguide built with PostCSS and JavaScript">
 {% endblock %}
 
-
+<section>
 {% block content %}
   <h1>
     Pod 
@@ -17,7 +17,7 @@
      <li><a href="/components/{{ name.name }}">{{ name.name | replace("-", " ") | capitalize }}</a></li>
   {% endfor %}
 </ul>
-
+</section>
 {% endblock %}
 
 
