--- a/assets/css/4-elements.css
+++ b/assets/css/4-elements.css
@@ -22,26 +22,14 @@
     font-size: var(--font-size);
   }
 
-  section {
-
+  section,
+  article,
+  header,
+  footer,
+  main {
+    padding-left: 20px;
   }
 
-  article {
-
-  }
-
-  header {
-
-  }
-
-  footer {
-    
-  }
-
-  aside {
-
-  }
-   
   blockquote {
     margin: 0;
     padding: 15px;
