--- a/views/templates/layout.njk
+++ b/views/templates/layout.njk
@@ -1,12 +1,19 @@
 {% include "includes/head.njk" %}
 
-<main id="main-content" role="main">
+<main id="main-content" class="content" role="main">
   {% block content %}
   {% endblock %}
 </main>
 
 <footer class="footer">
   {% block footer %}
+  <ul>
+  <li>ds</li>
+  <li>ds</li>
+  <li>ds</li>
+  <li>dsa</li>
+  </ul>
+  <p>csasfsffds</p>
   {% endblock %}
 </footer>
 
