--- a/views/includes/head.njk
+++ b/views/includes/head.njk
@@ -34,35 +34,16 @@
       <link rel="stylesheet" href="/css/pod.css">
     </head>
   <body>
-  <div id="js-wrapper" class="wrapper sidebar-closed">
-    <div class="content-wrapper">
-      <a href="#main">skip to main content</a>
-      <button id="js-sidebar__button" class="sidebar__button">Open menu</button>
-      {% block header %}
-        <header role="banner" class="header">
-          {% include "components/a11y-buttons/a11y-buttons.njk" %}
-          <h1 class="company-name">Header One</h1>
-        </header>
-      {% endblock %}
-      {# Sidebar #}
-      <aside id="js-sidebar" class="sidebar" tabindex="0" hidden='true' aria-hidden>
-        <ul  id="js-navigation__list" class="navigation__list">
-          <li class="navigation__item">
-            <a href="/" title="Go to the home page" class="navigation__anchor {% if page_id == 'home' %}active  {% endif %}">
-              <span class="navigation__anchor__text">Home</span>
-            </a>
-          </li>
-          <li class="navigation__item">
-            <a href="/component-list" title="View the components page" class="navigation__anchor {% if page_id == 'component-list' %}active  {% endif %}">
-              <span class="navigation__anchor__text">Components</span>
-            </a>
-          </li>
-          <li class="navigation__item">
-            <a href="/about" title="View the bout Pod page" class="navigation__anchor {% if page_id == 'about' %}active  {% endif %}">
-              <span class="navigation__anchor__text">About Pod</span>
-            </a>
-          </li>
-        </ul>
-      </aside>
+  <div class="wrapper">
+    {% block header %}
+      <header role="banner" class="header">
+        <a href="#main-content">Skip to main content</a>
+        {% include "components/a11y-buttons/a11y-buttons.njk" %}
+        <h1 class="company-name">Header One</h1>
+      </header>
+    {% endblock %}
+    {% include "includes/sidebar.njk" %}
+
+      
 
 
