--- a/views/components/list/list.njk
+++ b/views/components/list/list.njk
@@ -1,28 +1,30 @@
 
 
- <ul aria-labelledby="movie-list">
-    <li>Episode I: The Phantom Menace</li>
-    <li>Episode II: Attack of the Clones</li>
-    <li>Episode III: Revenge of the Sith</li>
-    <li>Episode IV: A New Hope</li>
-    <li>Episode V: The Empire Strikes Back</li>
-    <li>Episode VI: Return of the Jedi</li>
-    <li>Episode VII: The Force Awakens</li>
+ <ul aria-labelledby="movie-list" class="unordered-list">
+    <li class="unordered-list__list-item">Episode I: The Phantom Menace</li>
+    <li class="unordered-list__list-item">Episode II: Attack of the Clones</li>
+    <li class="unordered-list__list-item">Episode III: Revenge of the Sith</li>
+    <li class="unordered-list__list-item">Episode IV: A New Hope</li>
+    <li class="unordered-list__list-item">Episode V: The Empire Strikes Back</li>
+    <li class="unordered-list__list-item">Episode VI: Return of the Jedi</li>
+    <li class="unordered-list__list-item">Episode VII: The Force Awakens</li>
   </ul>
 
-   <ol aria-labelledby="movie-list">
-    <li>Episode I: The Phantom Menace</li>
-    <li>Episode II: Attack of the Clones</li>
-    <li>Episode III: Revenge of the Sith</li>
-    <li>Episode IV: A New Hope</li>
-    <li>Episode V: The Empire Strikes Back</li>
-    <li>Episode VI: Return of the Jedi</li>
-    <li>Episode VII: The Force Awakens</li>
+   <ol aria-labelledby="movie-list" class="ordered-list">
+    <li class="ordered-list__list-item">Episode I: The Phantom Menace</li>
+    <li class="ordered-list__list-item">Episode II: Attack of the Clones</li>
+    <li class="ordered-list__list-item">Episode III: Revenge of the Sith</li>
+    <li class="ordered-list__list-item">Episode IV: A New Hope</li>
+    <li class="ordered-list__list-item">Episode V: The Empire Strikes Back</li>
+    <li class="ordered-list__list-item">Episode VI: Return of the Jedi</li>
+    <li class="ordered-list__list-item">Episode VII: The Force Awakens</li>
   </ol>
 
-  <dl>
-    <dt>Coffee</dt>
-    <dd>Black hot drink</dd>
-    <dt>Milk</dt>
-    <dd>White cold drink</dd>
+  <dl class="description-list">
+    <dt class="description-list__title">first item</dt>
+    <dd class="description-list__description">definition for first item in list</dd>
+    <dt class="description-list__title">second item</dt>
+    <dd class="description-list__description">definition for second item in list</dd>
+    <dt class="description-list__title">third item</dt>
+    <dd class="description-list__description">definition for third item in list</dd>
   </dl>
