--- a/views/components/navigation/navigation.njk
+++ b/views/components/navigation/navigation.njk
@@ -1,21 +1,21 @@
-<ul  id="js-navigation__list" class="navigation__list">
+<ul class="navigation__list">
   <li class="navigation__item">
-     <a href="#" title="Go to the home page" class="navigation__anchor">
+     <a href="/" title="Go to the home page" class="navigation__anchor">
       <span class="navigation__anchor__text">Home</span>
      </a>
   </li>
   <li class="navigation__item">
-    <a href="#" title="View the components page" class="navigation__anchor">
+    <a href="/" title="View the components page" class="navigation__anchor">
       <span class="navigation__anchor__text">Components</span>
     </a>
    </li>
   <li class="navigation__item">
-    <a href="#" title="View the bout Pod page" class="navigation__anchor">
+    <a href="/" title="View the bout Pod page" class="navigation__anchor">
       <span class="navigation__anchor__text">About Pod</span>
     </a>
   </li>
     <li class="navigation__item">
-    <a href="#" title="An active example" class="navigation__anchor active">
+    <a href="/" title="An active example" class="navigation__anchor active">
       <span class="navigation__anchor__text">Active</span>
     </a>
   </li>
