--- a/views/includes/head.njk
+++ b/views/includes/head.njk
@@ -35,11 +35,12 @@
     </head>
   <body>
   <div class="wrapper">
+   
     {% block header %}
       <header role="banner" class="header">
         <a href="#main-content">Skip to main content</a>
-        {% include "components/a11y-buttons/a11y-buttons.njk" %}
         <h1 class="company-name">Header One</h1>
+        <p>Description of page</p>
       </header>
     {% endblock %}
     {% include "includes/sidebar.njk" %}
