--- a/views/templates/layout.njk
+++ b/views/templates/layout.njk
@@ -1,20 +1,9 @@
 {% include "includes/head.njk" %}
 
 <main id="main-content" class="content" role="main">
+{% include "components/a11y-buttons/a11y-buttons.njk" %}
   {% block content %}
   {% endblock %}
 </main>
-
-<footer class="footer">
-  {% block footer %}
-  <ul>
-  <li>ds</li>
-  <li>ds</li>
-  <li>ds</li>
-  <li>dsa</li>
-  </ul>
-  <p>csasfsffds</p>
-  {% endblock %}
-</footer>
 
 {% include "includes/footer.njk" %}
