--- a/views/components/list/list.css
+++ b/views/components/list/list.css
@@ -2,9 +2,44 @@
   Lists
   ----------------------------------- */
   
+  /* Unrdered lists */
+
+  .unordered-list {
+    list-style-type: none;
+    padding: 0;
+    margin-top: .4em;
+    margin-bottom: 1em;
+    padding-left: 1em;
+  }
+
+  .unordered-list__list-item {
+    margin-bottom: .4em;
+    list-style-type: disc;
+  }
+
+
   /* Ordered lists */
 
+  .ordered-list {
+    list-style-type: none;
+    padding: 0;
+    margin-top: .4em;
+    margin-bottom: 1em;
+    padding-left: 1em;
+  }
 
-  /* Unordered lists */
+  .ordered-list__list-item {
+    margin-bottom: .4em;
+    list-style-type: decimal;
+  }
 
-  /* Description list */
+
+ /* Definition List */
+
+ dl {
+  margin-top: .4em;
+  margin-bottom: 1em;
+ }
+
+
+
