--- a/views/components/a11y-buttons/a11y-buttons.css
+++ b/views/components/a11y-buttons/a11y-buttons.css
@@ -2,9 +2,25 @@
   A11y buttons
   ----------------------------------- */
 
+.accessibility-tools {
+  float: right;
+}
+
+.accessibility-tools__text-size {
+  
+}
+
+.accessibility-tools__colour-theme {
+  
+}
+
+.accessibility-tools__font-family {
+  
+}
+
 .button--ally {
   background: var(--colour-light);
-  background: var(--colour-dark);
+  background: var(--colour-medium);
 }
 
 
