--- a/views/components/a11y-buttons/a11y-buttons.njk
+++ b/views/components/a11y-buttons/a11y-buttons.njk
@@ -1,17 +1,17 @@
-<div aria-label="Accessibility tools">
-  <fieldset>
-    <legend>Control font size</legend>
+<div aria-label="Accessibility tools" class="accessibility-tools">
+  <fieldset class="accessibility-tools__text-size">
+    <legend>Control text size</legend>
     <button id="increase-font" class="button button--ally" type="button">A+</button>
     <button id="decrease-font" class="button button--ally" type="button">A-</button>
   </fieldset>
-  <fieldset>
+  <fieldset class="accessibility-tools__colour-theme">
     <legend>Control colour theme</legend>
     <button id="theme-default" class="button button--ally" type="button">Default theme</button>
     <button id="theme-dark" class="button button--ally" type="button">Dark theme</button>
     <button id="theme-monochrome" class="button button--ally" type="button">Monochrome theme</button>
   </fieldset>
-  <fieldset>
-    <legend class="visually-hidden">Control Font</legend>
+  <fieldset class="accessibility-tools__font-family">
+    <legend class="visually-hidden">Control font family</legend>
     <button class="button button--ally "id="default-font" type="button"  aria-label="Change font to Helvetica">Default</button>
     <button class="button button--ally "id="dyslexic-font" type="button" aria-label="Change font to Comic Sans">Comic Sans</button>
   </fieldset>
