--- a/views/components/list/list.css
+++ b/views/components/list/list.css
@@ -2,8 +2,7 @@
   Lists
   ----------------------------------- */
   
-  /* Unrdered lists */
-
+  /* Unordered lists */
   .unordered-list {
     list-style-type: none;
     padding: 0;
@@ -19,7 +18,6 @@
 
 
   /* Ordered lists */
-
   .ordered-list {
     list-style-type: none;
     padding: 0;
@@ -35,7 +33,6 @@
 
 
  /* Definition List */
-
  dl {
   margin-top: .4em;
   margin-bottom: 1em;
