--- a/views/components/anchor-tags/index.njk
+++ b/views/components/anchor-tags/index.njk
@@ -6,7 +6,7 @@
 {% endblock %}
 
 
-{% block componentDescription %}
-  <p>A anchor is... </p>
+{% block pageHeading %}
+  <h1>{{ componentName | replace("-", " ") | capitalize }}</h1>
+  <p>A anchor button is... </p>
 {% endblock %}
-
