--- a/views/components/buttons/index.njk
+++ b/views/components/buttons/index.njk
@@ -7,8 +7,9 @@
 
 
 
-{% block componentDescription %}
-  <p>A button is... </p>
+{% block pageHeading %}
+  <h1>{{ componentName | replace("-", " ") | capitalize }}</h1>
+  <p>A button button is... </p>
 {% endblock %}
 
 
