--- a/views/components/list/index.njk
+++ b/views/components/list/index.njk
@@ -9,8 +9,9 @@
 
 
 
-{% block componentDescription %}
-  <p>Lists ... </p>
+{% block pageHeading %}
+  <h1>{{ componentName | replace("-", " ") | capitalize }}</h1>
+  <p>A list is... </p>
 {% endblock %}
 
 
