--- a/views/components/navigation/index.njk
+++ b/views/components/navigation/index.njk
@@ -8,11 +8,10 @@
 {% endblock %}
 
 
-
-{% block componentDescription %}
-  <p>???? is... </p>
+{% block pageHeading %}
+  <h1>{{ componentName | replace("-", " ") | capitalize }}</h1>
+  <p>A ??? button is... </p>
 {% endblock %}
-
 
  
 
