--- a/views/components/skip-navigation-link/index.njk
+++ b/views/components/skip-navigation-link/index.njk
@@ -5,8 +5,10 @@
   <meta name="description" content="Accessible button markup and CSS">
 {% endblock %}
 
-
-{% block componentDescription %}
-  <p>A skip navigation link content is... </p>
+{% block pageHeading %}
+  <h1>{{ componentName | replace("-", " ") | capitalize }}</h1>
+  <p>A skip navigation link  is... </p>
 {% endblock %}
+
+
 
