--- a/views/components/sub-navigation/sub-navigation.css
+++ b/views/components/sub-navigation/sub-navigation.css
@@ -11,6 +11,10 @@
   color: var(--colour-dark);
   word-wrap: break-word;
 }
+
+.sub-navigation__anchor:hover {
+  color: var(--colour-bright);
+}
   
 .sub-navigation__anchor.active {
   border-bottom: 5px solid var(--colour-bright);
