--- a/views/index.njk
+++ b/views/index.njk
@@ -6,11 +6,14 @@
   <meta name="description" content="Component styleguide built with PostCSS and JavaScript">
 {% endblock %}
 
+{% block pageHeading %}
+  <h1 class="company-name">Pod</h1>
+  <p>Description of page</p>
+{% endblock %} 
+
 <section>
 {% block content %}
-  <h1>
-    Pod 
-  </h1>
+
 
 
 </section>
