--- a/views/components/a11y-buttons/a11y-buttons.njk
+++ b/views/components/a11y-buttons/a11y-buttons.njk
@@ -6,12 +6,12 @@
   </fieldset>
   <fieldset class="accessibility-tools__colour-theme">
     <legend>Control colour theme</legend>
-    <button id="theme-default" class="button button--ally" type="button">Default theme</button>
+    <button id="theme-default" class="button button--ally" type="button">Default</button>
     <button id="theme-dark" class="button button--ally" type="button">Dark theme</button>
-    <button id="theme-monochrome" class="button button--ally" type="button">Monochrome theme</button>
+    <button id="theme-monochrome" class="button button--ally" type="button">Monochrome</button>
   </fieldset>
   <fieldset class="accessibility-tools__font-family">
-    <legend class="visually-hidden">Control font family</legend>
+    <legend>Control font family</legend>
     <button class="button button--ally "id="default-font" type="button"  aria-label="Change font to Helvetica">Default</button>
     <button class="button button--ally "id="dyslexic-font" type="button" aria-label="Change font to Comic Sans">Comic Sans</button>
   </fieldset>
