--- a/views/components/buttons/buttons.css
+++ b/views/components/buttons/buttons.css
@@ -9,9 +9,10 @@
     border-radius: .2em;
     color: var(--colour-white);
     line-height: 2.2;
+    font-weight: bold;
     box-shadow: 0;
     transition: all 0.3s ease-in-out;
-    box-shadow: 0px 1px 0px 0px currentColor;
+    /* box-shadow: 0px 1px 0px 0px var(--colour-black); */
     background: var(--colour-dark);
   }
 
@@ -26,7 +27,7 @@
 
   button[disabled="disabled"],
   button[disabled] {
-    opacity: 0.5;
+    opacity: 0.7;
     cursor: not-allowed;
   }
 
@@ -38,22 +39,14 @@
 
   .button--primary {
     background: var(--colour-bright);
-  }
-
-  .button--secondary {
-    background: var(--colour-medium);
+    color: var(--colour-dark);
   }
 
   .button--submit {
     background: var(--colour-bright);
+    color: var(--colour-dark);
   }
 
-  .button--reset {
-    background: var(--colour-medium);
-  }
 
-  .button--disabled {
-    background: var(--colour-medium);
-  }
 
 
