--- a/views/components/typography/index.njk
+++ b/views/components/typography/index.njk
@@ -9,8 +9,9 @@
 
 
 
-{% block componentDescription %}
-  <p>A Tab is... </p>
+{% block pageHeading %}
+  <h1>{{ componentName | replace("-", " ") | capitalize }}</h1>
+  <p>A ???? is... </p>
 {% endblock %}
 
 
